fix: product shelf view on tablet and phone

--- a/styles/css/home/vtex.product-summary.css
+++ b/styles/css/home/vtex.product-summary.css
@@ -1,3 +1,8 @@
-.imageContainer{
+.imageContainer,
+.imageNormal {
   min-height: 100px;
+}
+
+.imageNormal {
+  max-height: 180px
 }
